{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 596,
  "lineage": "1d41d38a-1cc8-70a6-0475-804bab0df17c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:internet-gateway/igw-06c79265f39142804",
            "id": "igw-06c79265f39142804",
            "owner_id": "767397723308",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "arn_suffix": "app/ecs-alb-ls/91d96272a7013c01",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ecs-alb-ls-850030335.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb-ls",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0302124c42d0200cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b315a1b438bc7e67"
              },
              {
                "subnet_id": "subnet-0d8a5820baecdafda"
              }
            ],
            "subnets": [
              "subnet-0b315a1b438bc7e67",
              "subnet-0d8a5820baecdafda"
            ],
            "tags": {
              "Name": "ecs-alb-ls"
            },
            "tags_all": {
              "Name": "ecs-alb-ls"
            },
            "vpc_id": "vpc-0678d5a630120c043",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/89a52fff5714c6b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-account-jp/ba13ea7d3717edc4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/89a52fff5714c6b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "mutual_authentication": [],
            "port": 8072,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.account",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bank",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/77dcee41db2809cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-bank-jp/bb55405ca7f0b863",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/77dcee41db2809cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "mutual_authentication": [],
            "port": 8083,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.bank",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "transaction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/563aa0c6f7633d62",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-transaction-jp/2af2b524505aea03",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/563aa0c6f7633d62",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "mutual_authentication": [],
            "port": 8073,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.transaction",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "underwriter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/5d40cee8314fde77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-underwriter-jp/0c54c4faf7db4c7c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/5d40cee8314fde77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "mutual_authentication": [],
            "port": 8071,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.underwriter",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/90b3c7f49dec14b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-user-jp/c536b026939c702a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:listener/app/ecs-alb-ls/91d96272a7013c01/90b3c7f49dec14b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:loadbalancer/app/ecs-alb-ls/91d96272a7013c01",
            "mutual_authentication": [],
            "port": 8070,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.user",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-account-jp/ba13ea7d3717edc4",
            "arn_suffix": "targetgroup/tg-account-jp/ba13ea7d3717edc4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-account-jp/ba13ea7d3717edc4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-account-jp",
            "port": 8072,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bank",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-bank-jp/bb55405ca7f0b863",
            "arn_suffix": "targetgroup/tg-bank-jp/bb55405ca7f0b863",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-bank-jp/bb55405ca7f0b863",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-bank-jp",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "transaction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-transaction-jp/2af2b524505aea03",
            "arn_suffix": "targetgroup/tg-transaction-jp/2af2b524505aea03",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-transaction-jp/2af2b524505aea03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-transaction-jp",
            "port": 8073,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "underwriter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-underwriter-jp/0c54c4faf7db4c7c",
            "arn_suffix": "targetgroup/tg-underwriter-jp/0c54c4faf7db4c7c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-underwriter-jp/0c54c4faf7db4c7c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-underwriter-jp",
            "port": 8071,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-user-jp/c536b026939c702a",
            "arn_suffix": "targetgroup/tg-user-jp/c536b026939c702a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397723308:targetgroup/tg-user-jp/c536b026939c702a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-user-jp",
            "port": 8070,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:route-table/rtb-0a5f95d7bba25e85b",
            "id": "rtb-0a5f95d7bba25e85b",
            "owner_id": "767397723308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c79265f39142804",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a709fb8ca72dc48",
            "route_table_id": "rtb-0a5f95d7bba25e85b",
            "subnet_id": "subnet-0d8a5820baecdafda"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:security-group/sg-0302124c42d0200cf",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0302124c42d0200cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-security-group-jp",
            "name_prefix": "",
            "owner_id": "767397723308",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:security-group/sg-08242ebf590c783ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08242ebf590c783ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "767397723308",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:subnet/subnet-0d8a5820baecdafda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a5820baecdafda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397723308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:subnet/subnet-0b315a1b438bc7e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b315a1b438bc7e67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397723308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:vpc/vpc-0678d5a630120c043",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07956979ecaba8535",
            "default_route_table_id": "rtb-0298762c836188c59",
            "default_security_group_id": "sg-0ccede63b474cb5f3",
            "dhcp_options_id": "dopt-08591724f6c17669a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0678d5a630120c043",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0298762c836188c59",
            "owner_id": "767397723308",
            "tags": {
              "name": "main"
            },
            "tags_all": {
              "name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gateway_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:subnet/subnet-0d8a5820baecdafda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a5820baecdafda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397723308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0678d5a630120c043"
          }
        }
      ]
    },
    {
      "module": "module.gateway_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:security-group/sg-09a4220cb881645f5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09a4220cb881645f5",
            "ingress": [],
            "name": "gateway-service-2024052714240741410000000d",
            "name_prefix": "gateway-service-",
            "owner_id": "767397723308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gateway-service",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "gateway-service",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_lb.ecs_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.db.module.db_instance.aws_secretsmanager_secret_rotation.this",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_partition.current",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_instance_role_association.aws_db_instance_role_association.this",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.gateway_service.data.aws_subnet.this",
            "module.rds_security_group.aws_security_group.this",
            "module.rds_security_group.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gateway_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_my_ip_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "108.7.200.240/32"
            ],
            "description": "Allow all incoming traffic from my IP",
            "from_port": 0,
            "id": "sgrule-761677519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a4220cb881645f5",
            "security_group_rule_id": "sgr-0e9fd8c5271f0c90b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_lb.ecs_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.db.module.db_instance.aws_secretsmanager_secret_rotation.this",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_partition.current",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_instance_role_association.aws_db_instance_role_association.this",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.gateway_service.aws_security_group.this",
            "module.gateway_service.data.aws_subnet.this",
            "module.rds_security_group.aws_security_group.this",
            "module.rds_security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2057964913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09a4220cb881645f5",
            "security_group_rule_id": "sgr-0b19592d2f134db35",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_lb.ecs_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.db.module.db_instance.aws_secretsmanager_secret_rotation.this",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_partition.current",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_instance_role_association.aws_db_instance_role_association.this",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.gateway_service.aws_security_group.this",
            "module.gateway_service.data.aws_subnet.this",
            "module.rds_security_group.aws_security_group.this",
            "module.rds_security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all incoming traffic from inside VPC",
            "from_port": 0,
            "id": "sgrule-4167778537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a4220cb881645f5",
            "security_group_rule_id": "sgr-059fbafba2cd7296c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_subnet_group.db_subnet_group",
            "aws_lb.ecs_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.aws_iam_role_policy_attachment.enhanced_monitoring",
            "module.db.module.db_instance.aws_secretsmanager_secret_rotation.this",
            "module.db.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.db.module.db_instance.data.aws_partition.current",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_instance_role_association.aws_db_instance_role_association.this",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.gateway_service.aws_security_group.this",
            "module.gateway_service.data.aws_subnet.this",
            "module.rds_security_group.aws_security_group.this",
            "module.rds_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.rds_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397723308:security-group/sg-0f66e5b4cadda4210",
            "description": "Security group for Joe RDS",
            "egress": [],
            "id": "sg-0f66e5b4cadda4210",
            "ingress": [],
            "name": "alinedb_sg_jp-20240527141948865200000004",
            "name_prefix": "alinedb_sg_jp-",
            "owner_id": "767397723308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alinedb_sg_jp"
            },
            "tags_all": {
              "Name": "alinedb_sg_jp"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0678d5a630120c043"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-4167936615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f66e5b4cadda4210",
            "security_group_rule_id": "sgr-078478abcfe3db4e8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.rds_security_group.aws_security_group.this",
            "module.rds_security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}